# BeerSherpa

./: README.md
beer_sherpa_bringup/: CMakeLists.txt  package.xml
beer_sherpa_bringup/launch/: aruco.launch  pcl.launch  vision.launch  zed_camera.launch
beer_sherpa_bringup/params/: common.yaml  zed2.yaml
beer_sherpa_control/: CMakeLists.txt  package.xml
beer_sherpa_control/scripts/: beer_sherpa_coordinator.py  beer_sherpa_ifttt.py  install.sh
beer_sherpa_description/: CMakeLists.txt  package.xml
beer_sherpa_description/meshes/: BeerRamp.blend  BeerRampBack.stl  BeerRampFront.stl  DingoGX5.stl  DingoMounts.blend  DingoUST.stl  FridgeBar.stl  FridgeBody.stl  FridgeCap.stl  FridgeHandle.blend  Gen3LiteZed.blend  Gen3LiteZed_1.stl  Gen3LiteZed_2.stl
beer_sherpa_description/scripts/: beer_sherpa.sh
beer_sherpa_description/urdf/: beer_sherpa.urdf.xacro
